# tomocam

./: CMakeLists.txt  CMakePresets.json  Dockerfile  LICENCE  NERSC_MODULES.sh  README  README.md  TODO  add_lic_header.sh  build.py  pyproject.toml  setup.cfg  setup.py
clean_matlab_code/: CreateCircularBinaryMask.m  MBIRTV.m  compressive_pctomo.m  exShwgnuradon.m  exTvwgnuradon.m  exTvwgnuradonX.m  exTvwgnuradon_venkat.m  forwarmodel.m  main_timing.m  main_timingx.m  mbir_main.m  mbir_main.m~  opts_init.m  radavgop.m  solveOGM.m  testRadavg.m  testTVwgnufft.m  test_3Dproj.m  test_MBIRTV.m  test_split.m  testgaccumaray.m  testgnufft.m  testgnufft_spmv.m  testgsparse.m  testgsparsea.m  timing2.m
clean_matlab_code/Common/: cropmat.m  imgcplx.m  make_grid.m  padmat.m  regrid.m
clean_matlab_code/gnufft/: KB2.m  KBdensity1.m  KBlut.m  deapodization.m  deapodization_v2.m  forwarmodel_v2.m  gKB2.m  gKBlut.m  gnufft_init.m  gnufft_init_op.m  gnufft_init_op_v2.m  gnufft_init_spmv.m  gnufft_init_spmv_op.m  gnufft_init_spmv_op_v2.m  gnufft_init_spmv_op_v3.m  gnufft_initx.m  registers.m  xtiming.m  ytiming.m
clean_matlab_code/gpu/: Makefile  compile.sh  compile.sh~  compile2.sh  compile3.sh  compile_a.sh  compile_old.sh  cuda_sample.cu  cuda_sample.h  gcoo2csr.cu  gcoo2csr.mexa64  gcsparse.m  gcsr2coo.cu  gptr2row.cu  gptr2row.mexa64  grow2ptr.cu  grow2ptr.mexa64  gspmv.cu  gspmv_coo.cu  gspmv_coo.mexa64  gspmv_csr.cu  gspmv_csr.mexa64  gspmv_s.cu  gspmvr.cu  kb.cu  kernel.cu  kernel_gold.cu  kerneldc.cu  mexme.m  overlap.h  polarbin.cu  polarbin1.cu  polarbin1.mexa64  polarbin2.cu  polargrid.cu  polargrid.h  polargrid2.h  polargrid_cub.cu  polargrid_cub_broken.cu  polargrid_cub_broken2.cu  (+14 more)
clean_matlab_code/irt/: mex_build.m  readme
clean_matlab_code/irt/align/: TEST_reg_CG_noR.m  knot_geom.m  makeB.m
clean_matlab_code/irt/blob/: fig_blob_spectra.m
clean_matlab_code/irt/ct/: de_ftab.m  wls_simplex.m  xray_read_dens.m  xray_read_spectra.m
clean_matlab_code/irt/data/: read_ncat.m  readme
clean_matlab_code/irt/doc/: irt.tex  s,fatrix.tex  s,over.tex
clean_matlab_code/irt/emission/: em_test_setup.m  eml_em.m  eml_inc_em.m  eml_osem.m  eml_osem_example.m  epl_os_emdp.m  eql_obj.m  eql_os_emdp_test.m  hole_example1.m  psf_mismatch_example1.m  psf_mismatch_example2.m
clean_matlab_code/irt/example/: cone_beam_ct_example.m  denoise_threshold_test.m  l1_regress_example.m  l1_regress_fun.m  mri_example.m  mri_example.m~  mri_example2.m  mri_example_b0.m  mri_sense_demo1.m  mri_trajectory_radial.m  pet_2z_example.m  pet_transmission_example.m  radon_example.m  restore_ex2.m  restore_example.m  restore_sparse.m  (+5 more)
clean_matlab_code/nufftw/: README  install.sh
clean_matlab_code/operators/: oneProjectorMex.m  opAbsDifference.m  opDifference.m  opFFTC.m  opFPolyfit.m  opFPolyfit0.m  opFatrix.m  opFmsk.m  opPfit.m  opPfith.m  opPolyfit.m  opShearlet2D.m  solveTV.m
clean_matlab_code/viewer3d_version11/: testrenderer.m
cmake/: FindMPI.cmake  FindMPICH.cmake  Findcufinufft.cmake  Findfinufft.cmake  Findhdf5.cmake  Findnlohmann_json.cmake
conda/: meta.yaml
cuda/: af_api.cpp  af_api.h  afnumpyapi.cc  afnumpyapi.h  cuGradients.cu  cuPolarsample.cu  cuPolarsampleTranspose.cu  cuTVD.cu  cuda_sample.cu  cuda_sample.h  debug.cu  polarbin.cc  polargrid.cc  polargrid.cu  polarsample.cc  polarsample.cpp  polarsample.h  polarsample_transpose.cc  polarsample_transpose.cpp  pyGnufft.cc  pyGnufft.cpp  pyGnufft.h  pyutil.cc  tvd_update.cc  tvd_update.cpp
docs/: conf.py  index.rst  modules.rst  tomocam.rst
json/: foam.json  shepplogan.json  tb86.json
python_2D/: #main.py#  XT_Common.py  XT_ForwardModel.py  XT_argsParser.py  XT_argsParser.py~  benchmark_Gridrec.py  example_script.sh  example_script2.sh  example_script_gridrec.sh  example_script_mbir.sh  example_script_sirt.sh  main.py  main.py~  mpi4py_tomocam.py  normalize.py  reconstruct_gridrec.py  reconstruct_mbir.py  reconstruct_sirt.py  run_debug.py  testPolarSample.py  testPolarTranspose.py  test_ForwardModel.py  test_ForwardModel3D.py  test_Gridrec.py  test_MBIR.py  test_SIRT.py  test_fastGridrec.py  test_futures.py  test_hessian.py  test_tomopy.py  test_tvd.py  tomoCam.py
scripts/: fbp.py  gen_clangd_config.py  input.json  mbir.py  run.py  run_mbir.py  test_mbir.py  test_tomopy.py  tomocam_mbir.ipynb  viewer.py
src/: CMakeLists.txt  backward.cpp  calc_error.cu  calc_gradient.cpp  caxpy.cpp  common.h  cpu_totalvar.cpp  cuPolarsample.cu  cuPolarsampleTranspose.cu  cuTVD.cu  cuTVF.cu  deapod.cu  debug.cu  debug.cuh  debug.h  dev_array.h  dev_memory.cuh  dist_array.cpp  dist_array.h  downsample.cpp  error.cpp  error2.cpp  fft.cpp  fft.h  fftshift.cu  fftshift.h  forward.cpp  func_eval.cpp  gpu_ops.cu  gradient.cpp  gradient2.cpp  internals.h  iradon.cpp  kaiser.cu  kaiser.cuh  kernel.h  machine.h  mbir.cpp  mbir2.cpp  multiproc.h  (+44 more)
src/gpu/: circshift.cu  circshift.cuh  cuTV2.cu  cuTVD.cu  dev_memory.cuh  fftshift.cu  fftshift.cuh  filters.cuh  gpu_ops.cu  gpu_ops.cuh  lanczos.cu  nufft_utils.cu  padding.cu  padding.cuh  potential_function.cuh  ramlak.cu  resample.cuh  totalvar.cuh  tv_hessian.cu  utils.cuh
src/hdf5/: h5dtype.h  reader.h  writer.h
test/: CMakeLists.txt  Makefile_cuda  Makefile_cuda_complex  backproj.cpp  comparison_test.py  cuPolarsample.cu  cuTVD.cu  dropcol.cpp  dsample.cpp  error.cpp  example.py  fbp.cpp  fft.cpp  forward.cpp  gradient.cpp  gridrec.py  mbir.cpp  mbir2.cpp  mrf2d_stencil_cuda.cu  padding.cpp  polarsample.cc  polarsample.h  polarsample_transpose.cc  radon.cpp  reader.cpp  reader.h  test.py  test_backproj.cpp  test_backward.cpp  test_complex_mrf.cu  test_downsample.cpp  test_dropcol.cpp  test_error.cpp  test_forward.cpp  test_gradient.cpp  test_gridrec.cpp  test_lipschitz.cpp  test_mbir.cpp  test_mbir.py  test_padding.cpp  (+16 more)
test_scripts/: example.py  example.py~  fbp.py  fbp.py~  test_tomopy.py  test_tomopy_luis.py
tomocam/: XT_ForwardModel.py  __init__.py  _version.py  darray.py  fft.py  gradients.py  gridrec.py  init.py  kernels.py  modeling.py  recon.py  tomocam.py  transform.py  utils.py
(+397 files in other folders)
