
[build-system]
requires = [ "setuptools>=42.0.0", "wheel>=0.32.0", "setuptools_cpp>=0.0.11", "scikit-build>=0.11.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "tomocam"
version = "3.0.1"
description = "tomocam: Model Based Iterative Reconstruction (MBIR) of synchrotron tomography data using NUFFT on GPUs."
readme = "README.md"
authors = [ {name = "Dinesh Kumar", email = "dkumar@lbl.gov"} ]
dependencies = [ "numpy" ]
requires-python = ">=3.6"

[tool.scikit-build]
cmake.args = [ "-DMULTI_PROC:BOOL=ON", "-DENABLE_PYTHON:BOOL=ON" ]
#cmake.args = [ "-DENABLE_PYTHON:BOOL=ON" ]
cmake.build-type = "Release"
cmake.source-dir = "."
ninja.make-fallback = true
